refactor: replace Collectores.toList() with toList() in services