@@ -14,7 +14,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -61,7 +60,7 @@ public class ProfessionalService {
         return professionalRepository.findByActiveTrue()
                 .stream()
                 .map(ProfessionalSummaryResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
